[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "ipython>=8.25.0",
    "ipykernel",
    "aiohttp",
    "pytz",
    "loguru",
    "selenium==4.29.0",
    "beautifulsoup4==4.13.3"
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
